minor additions to scaffold code

--- a/neural_machine_translation/nmt.ipynb
+++ b/neural_machine_translation/nmt.ipynb
@@ -75,15 +75,16 @@
     "        self.input_size = input_size\n",
     "        self.output_size = output_size\n",
     "        \n",
-    "        # use rand(n) to get tensors to intitialize your weight matrix and bias tensor \n",
+    "        # use rand(n) to get tensors to initialize your weight matrix and bias tensor \n",
     "        # then use Parameter( ) to wrap them as Variables visible to module.parameters()\n",
-    "        \n",
+    "        self.weights = Variable(torch.randn(output_size, input_size), requires_grad=True)\n",
+    "        self.bias = Variable(torch.randn(output_size), requires_grad=True)        \n",
     "        \n",
     "    def forward(self, input_var, use_relu=False):\n",
     "        # standard linear layer, just an affine transform with no nonlinearity \n",
     "        #  for this lab\n",
     "        # use torch.matmul not mm\n",
-    "        pass"
+    "        return torch.matmul()"
    ]
   },
   {
